--- a/index.html
+++ b/index.html
@@ -6,12 +6,47 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
   <title>PPDEMO</title>
+  <style>
+      body{
+        display:flex;
+        justify-content:center;
+        align-items:center;
+      }
+     
+    a,a:link,a:visited{
+        color:#000;
+        text-decoration:none;
+    }
+    a:hover{
+        color:#00ff;
+        text-decoration:none;
+    }
+
+    a:focus{
+        outline:none
+    }
+        
+    a::selection{
+        background-color:rgba(0,0,0,0);
+    }
+    a::-moz-selection{
+        background-color:rgba(0,0,0,0);
+    }
+
+	
+  </style>
 </head>
 <body>
    <h1>捲動上去後，title 會變成 file name，但這我的 Prototype 軟體有點難做到，所以沒做上去</h1>
-    <a href="player/index.html" target="_blank" id="btn_blue_R">Type A 我覺得這就蠻好的了</a>
-    <a href="player_animate_2/index.html" target="_blank" id="btn_blue_R">Type B 這是為下面四顆按鈕加一點過場</a>
-    <a href="player_animate_3/index.html" target="_blank" id="btn_blue_R">Type C 上面也有過場 by Roger 建議</a>
+    <p>
+        <a href="player/index.html" target="_blank" id="btn_blue_R">Type A 我覺得這就蠻好的了</a>
+    </p>
+    <p>
+        <a href="player_animate_2/index.html" target="_blank" id="btn_blue_R">Type B 這是為下面四顆按鈕加一點過場</a>
+    </p>
+    <p>
+        <a href="player_animate_3/index.html" target="_blank" id="btn_blue_R">Type C 上面也有過場 by Roger 建議</a>
+    </p>
   
   
 </body>
