--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
   <title>PPDEMO</title>
   <style>
       body{
-        display:flex;
-        justify-content:center;
-        align-items:center;
+        display:flex!important;
+        justify-content:center !important;
+        align-items:center !important;
       }
      
     a,a:link,a:visited{
-        color:#000;
-        text-decoration:none;
+        color:#000 !important;
+        text-decoration:none !important;
     }
     a:hover{
-        color:#00ff;
-        text-decoration:none;
+        color:#00ff !important;
+        text-decoration:none !important;
     }
 
     a:focus{
-        outline:none
+        outline:none!important;
     }
         
     a::selection{
-        background-color:rgba(0,0,0,0);
+        background-color:rgba(0,0,0,0) !important;
     }
     a::-moz-selection{
-        background-color:rgba(0,0,0,0);
+        background-color:rgba(0,0,0,0) !important;
     }
 
 	
