--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <title>PPDEMO</title>
   <style>
       body{
-        display:flex!important;
-        justify-content:center !important;
-        align-items:center !important;
+        margin:20% 30%;
+        text-align:center;
+        
       }
-     
+    h1,p{
+        flex:none;
+    }
     a,a:link,a:visited{
         color:#000 !important;
         text-decoration:none !important;
